[tool.poetry]
name = "autogroq"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
autogenstudio = "^0.1.3"
streamlit = "^1.36.0"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
langchain-community = "^0.2.7"
tiktoken = "^0.7.0"
matplotlib = "^3.9.1"
openai = "^1.35.13"
anthropic = "^0.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
